--- a/src/button/button.less
+++ b/src/button/button.less
@@ -20,7 +20,7 @@
   padding: 10px 21px;
   font-size: 14px;
   border-radius: 4px;
-  transition: box-shadow, width 0.2s ease, background-color 0.3s ease, color 0.3s ease;
+  transition: box-shadow 0.3s cubic-bezier(0, 0, 0, 1), background-color 0.3s ease, color 0.3s ease;
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
