--- a/src/button/button.less
+++ b/src/button/button.less
@@ -33,6 +33,16 @@
     border-radius: 100px;
   }
 
+  &--block {
+    display: block;
+    width: 100%;
+
+    & + & {
+      margin-left: 0;
+      margin-top: 10px;
+    }
+  }
+
   &-icon {
     width: 15px;
     height: 15px;
