--- a/src/button/button.less
+++ b/src/button/button.less
@@ -266,6 +266,34 @@
     }
   }
 
+  &-group {
+    display: inline-block;
+
+    & + & {
+      margin-left: 10px;
+    }
+
+    .@{button-name} {
+      margin-left: -1px;
+      border-radius: 0;
+
+      &:focus {
+        z-index: 1;
+      }
+    }
+
+    .@{button-name}:first-child {
+      margin-left: 0;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    .@{button-name}:last-child {
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+  }
+
   .loading-icon {
     stroke: #343640;
     stroke-width: 3.5;
