--- a/src/button.less
+++ b/src/button.less
@@ -245,7 +245,7 @@
     &:hover {
       color: #04A9FF;
       box-shadow: none;
-      background: none;
+      background: #F8F9FF;
     }
   }
 
@@ -268,6 +268,7 @@
 
   &-group {
     display: inline-block;
+    font-size: 0;
 
     & + & {
       margin-left: 10px;
